<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_size"
            android:layout_gravity="center_vertical|start"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="음식 공유 추가" />


        <!-- 경계선 추가 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@android:color/darker_gray"/>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_label" />

            <!-- 제목 -->
            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/food_background"
                android:hint="@string/title_hint"
                android:layout_marginBottom="28dp"
                android:inputType="text" />

            <!-- 세부 입력란 레이아웃 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp"
                android:background="@drawable/food_background"
                android:orientation="vertical">  <!-- 수직 중앙 정렬을 위한 속성 추가 -->

                <!-- 음식 타입 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/food_text_margin"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/food_type_label" />

                    <EditText
                        android:id="@+id/foodTypeEditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@android:color/transparent"
                        android:hint="@string/food_type_hint"
                        android:inputType="text" />
                </LinearLayout>

                <!-- 카테고리 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/category_label" />

                    <Spinner
                        android:id="@+id/categorySpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@android:color/transparent"
                        android:entries="@array/category_options" />
                </LinearLayout>

                <!-- 양 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/quentity_label" />

                    <!-- Quantity Spinner -->
                    <Spinner
                        android:id="@+id/quantitySpinner"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:entries="@array/quantity_options" />
                </LinearLayout>

                <!-- 제작 일자 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date_label" />

                    <!-- Manufacture Date Picker -->
                    <EditText
                        android:id="@+id/dateEditText"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/quantitySpinner"
                        android:background="@android:color/transparent"
                        android:drawableRight="@android:drawable/ic_menu_today"
                        android:focusable="false"
                        android:hint="@string/date_hint" />
                </LinearLayout>

                <!-- 교환 장소 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/transaction_place_label" />

                    <!-- Transaction Place EditText -->
                    <EditText
                        android:id="@+id/placeEditText"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dateEditText"
                        android:background="@android:color/transparent"
                        android:hint="@string/place_hint"
                        android:inputType="text" />
                </LinearLayout>

                <!-- 교환 방법 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/transaction_method_label" />

                    <!-- Transaction Method Spinner -->
                    <Spinner
                        android:id="@+id/methodSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_below="@id/placeEditText"
                        android:entries="@array/method_options" />
                </LinearLayout>

                <!-- 가격 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price_label" />

                    <!-- Price EditText -->
                    <EditText
                        android:id="@+id/priceEditText"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"

                        android:background="@android:color/transparent"
                        android:hint="@string/price_hint"
                        android:inputType="numberDecimal" />
                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description_label" />
            <!-- Description EditText -->
            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/food_background"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="이미지 추가" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="@dimen/update_image_margin"
                    android:src="@drawable/temp_nonimage" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="@dimen/update_image_margin"
                    android:src="@drawable/temp_nonimage" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="@dimen/update_image_margin"
                    android:src="@drawable/temp_nonimage" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_nonimage" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@color/white">

        <Button
            android:id="@+id/share_submit_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/big_button"
            android:text="등록"/>


    </LinearLayout>
</LinearLayout>
