<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_size"
            android:layout_gravity="center_vertical|start"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_back" />

        <!-- 경계선 추가 -->
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@android:color/darker_gray" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 제목 -->
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:text="@string/title_hint"
                android:textSize="24sp"
                android:background="@drawable/food_background"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp"
                />

            <!-- 이미지 슬라이더 추가 -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/foodImageSlider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="28dp"/>

            <!-- 이미지뷰 레이아웃 -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

            </FrameLayout>

            <!-- 세부 입력란 레이아웃 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp"
                android:background="@drawable/food_background"
                android:orientation="vertical">  <!-- 수직 중앙 정렬을 위한 속성 추가 -->

                <!-- 음식 타입 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/food_text_margin"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="음식 타입" />
                    <TextView
                        android:id="@+id/foodTypeTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="한식"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <!-- 카테고리 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/food_text_margin"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="카테고리" />
                    <TextView
                        android:id="@+id/categoryTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="저녁 식사"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <!-- 양 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/food_text_margin"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="양" />
                    <TextView
                        android:id="@+id/quantityTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="2인분" />
                </LinearLayout>

                <!-- 제작 일자 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/food_text_margin"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="제작 일자" />
                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="2022-07-15"/>
                </LinearLayout>

                <!-- 교환 장소 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/food_text_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/transaction_place_label" />

                    <!-- Transaction Place EditText -->
                    <TextView
                        android:id="@+id/placeTextView"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:text="직거래" />
                </LinearLayout>

                <!-- 교환 방법 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/food_text_margin"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/transaction_method_label" />

                    <!-- Transaction Method Spinner -->
                    <TextView
                        android:id="@+id/transactionmethod_TextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="텍스트뷰추가" />

                </LinearLayout>

                <!-- 가격 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/food_text_margin"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price_label" />

                    <!-- Price EditText -->
                    <TextView
                        android:id="@+id/priceTextView"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="1000dp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:background="@drawable/food_background"
                android:text="맛있는 저녁 식사 메뉴입니다." />


            <!-- 상단 리뷰 입력란과 등록 버튼 -->
            <LinearLayout
                android:id="@+id/reviewInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="28dp">

                <EditText
                    android:id="@+id/reviewEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="댓글쓰기 / 자기가 옛날에 썼던 리뷰 땜"
                    android:padding="8dp"
                    android:background="@android:color/darker_gray" />

                <Button
                    android:id="@+id/submitReviewButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="댓글 등록"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/darker_gray"
                    android:textColor="@android:color/white" />
            </LinearLayout>


            <!-- 댓글 목록 -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@color/white">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/big_button"
            android:layout_marginEnd="10dp"
            android:text="판매자에게 연락"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/big_button"
            android:text="구매"/>
    </LinearLayout>
</LinearLayout>


